# CFR2018

./: .gitignore
Arduino/Tests/LocalisationEncodeurs/: Definitions.h  LocalisationEncodeurs.ino  TestDeplacementEncodeurs.ino  debugage.py
Arduino/mainCode/: coders.h  definitions.h  mainCode.ino  motors.h  plier.h
Raspberry/src/construction_plan/: CMakeLists.txt  launch1.launch  package.xml
Raspberry/src/construction_plan/src/: construction_plan_node.cpp  raspicam_node.py
Raspberry/src/gazebo_simulation/: CMakeLists.txt  package.xml
Raspberry/src/gazebo_simulation/launch/: joystick_teleop.launch  keyboard_teleop.launch  robot_control.launch  robot_world.launch
Raspberry/src/gazebo_simulation/robot_control/: robot_control.launch
Raspberry/src/gazebo_simulation/urdf/: table.xacro
Raspberry/src/localisation/: CMakeLists.txt  README  package.xml
Raspberry/src/localisation/config/: amcl.yaml  gmapping.yaml
Raspberry/src/localisation/launch/: amcl.launch  gmapping.launch
Raspberry/src/localisation/maps/: map.pgm  map.yaml
Raspberry/src/robot_description/: CMakeLists.txt  package.xml
Raspberry/src/robot_description/urdf/: macros.xacro  robot.gazebo  robot.xacro
